test/libsolidity/syntaxTests/constants/mapping_constant.sol
mapping(uint => uint) constant b = x;
// ----
// TypeError 6161: (17-36): The value of the constant a has a cyclic dependency via a.
